# compiler-construction

./: .gitignore  LLVM API intro.txt  pom.xml
c++/: .gitignore  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  hello.c  run_CFG_pass.sh  run_CFG_test.sh  run_pass.sh  run_test.sh
c++/c/: Makefile  hello.c
c++/resources/c/: failTest.c  falsePositiveTest.c  hello.c  helloCFG.c  makeCFG.c  pointerChains.c  simplestTest.c
c++/resources/c/CFGTests/: branchingNoError.c  ifElse.c  llvmCrash.c  nestedIf.c  noBranching.c  pointerChainsCFG.c  simpleIf.c  simpleWhile.c
c++/skeleton/: Makefile  cmake_install.cmake
c++/src/: CFGPass.cpp  CMakeLists.txt  CustomPass.cpp  LatticeValue.cpp  LatticeValue.hpp  NullPointerDetector.cpp  NullPointerMap.cpp  Skeleton.cpp  VariableEntry.cpp  VariableEntry.hpp
java/: LLVM API intro.txt  pom.xml
java/src/main/c/: hello.c  hello.ll
java/src/main/java/compiler/: Main.java  ModuleLoader.java
src/main/c/: hello.bc  hello.c
src/main/java/: Fac.java  ModuleLoader.java
src/main/java/compiler/: Main.java  ModuleLoader.java
src/main/java/compiler/example/: Fac.java
